# GPU_doctor

./: README.md  docker-compose.yaml  pyproject.toml  requirements-linux.txt  requirements.txt  setup.cfg
collector/: db.py  for_testing.py  parsers.py  poller.py  schema.sql
deploy/: gpu-doctor.service
gpu_doctor/: api.py  cli.py  cli_ask.py
gpu_doctor/collector/: __init__.py  db.py  embeddings.py  for_testing.py  poller.py  retriever.py
scripts/: backfill_embeddings.py
tests/: test_parse.py  test_poller_output.py  test_poller_windows.py
tests/data/: sample.xml
