[metadata]
name = gpu_doctor
version = 0.1.0
description = Lightweight GPU telemetry collector and RAG assistant
long_description = file: README.md
long_description_content_type = text/markdown
author = Mira Hermoni
license = MIT
url = https://github.com/yourname/gpu_doctor
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: System :: Monitoring

[options]
python_requires = >=3.8,<3.12
packages = find:
install_requires =
    psutil>=5.9.0,<6.0
    lxml>=5.0,<6.0
    rich>=13.0,<14.0
    sentence-transformers>=2.6.0,<3.0
    faiss-cpu>=1.8.0,<2.0
    typer>=0.12.0,<1.0
    pydantic>=1.10.0,<2.0
    dcgm-agent-py>=3.3.0 ; platform_system=="Linux"  # only on Linux servers

[options.entry_points]
console_scripts =
    gpu_doc = gpu_doctor.cli:main

[options.package_data]
gpu_doctor = py.typed

[options.extras_require]
dev =
    pytest
    black
    mypy

[project.scripts]
gpu_doc   = "gpu_doctor.cli:main"          # wrapper (“gpu_doc run …”)
gpu_poll  = "collector.poller:main"        # <- python -m collector.poller

